<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClassLogin</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ClassNumber">學號:</string>
    <string name="ClassNumberPassword">密碼:</string>
    <string name="Login">登入</string>
    <string name="HintTextViewCN">請輸入學號9碼</string>
    <string name="HintTextViewCNP">請輸入校級信箱密碼</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="Main_Tab_Calendar">行事曆</string>
    <string name="Main_Tab_ClassList">所有課程一覽</string>
    <string name="ClassNameText">課程名稱： </string>
    <string name="Days">星期</string>
    <string name="StartTime">上課時間</string>
    <string name="EndTime">下課時間</string>
    <string name="Week">課程週數： </string>
    <string name="AddText">增減時段</string>
    <string name="StartDay">開始日期： </string>
    <string name="ClassSerial">課程序號： </string>
    <string name="ClassInformationStr">資訊</string>
    <string name="ClassInformationNoteStr">筆記</string>
    <string name="ClassInformationPhotoNoteStr">相片筆記</string>
    <string name="NowClass">目前課程</string>
    <string name="CompletClass">已完成課程</string>
    <string name="NoteInsertTitle">請輸入標題</string>
    <string name="NoteInsertContent">請輸入內容</string>
    <string name="BelongClass">所屬課程： </string>
    <string name="Title">標題</string>
    <string name="Content">筆記內容</string>
</resources>
