<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/LocationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ClassNumber" />

        <EditText
            android:id="@+id/ClassNumberET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/HintTextViewCN"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/notetextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ClassNumberPassword" />

        <EditText
            android:id="@+id/ClassNumberPET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/HintTextViewCNP"
            android:inputType="textPassword" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <Button
            android:id="@+id/LogintoTKU"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/Login" />

        <Button
            android:id="@+id/testbutton"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="測試" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

</LinearLayout>
