<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- /*
	 * 1	課程名稱(TV)				課程名稱(ET)
	 * 2	開始日期(TV)				開始日期(BT)
	 * 3	課程週數(TV)				課程週數(BT)
	 * 4	星期(TV)		開始時間(TV)	結束時間(TV) 	增減時段(TV)
	 * */ -->
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ShowClassSerial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ClassSerial"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ShowClassNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ClassNameText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ShowStartDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartDay"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ShowClassWeekTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Week"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ShowTimeFragmentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>
