<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="5" >
    
    <TextView
        android:id="@+id/IN_ClassSerial_TV"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/ClassSerial"
        android:textSize="24dp" />
    
    <EditText
        android:id="@+id/IN_ClassSerial_ET"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:digits="0123456789"
        android:maxLength="6"
        android:minEms="0"
        android:textSize="24dp" />
    
    <TextView
        android:id="@+id/IN_ClassName_TV"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/ClassNameText"
        android:textSize="24dp" />
    
    <EditText
        android:id="@+id/IN_ClassName_ET"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:maxLength="10"
        android:maxLines="2"
        android:minEms="0"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/IN_StartDay_TV"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:fitsSystemWindows="true"
        android:text="@string/StartDay"
        android:textSize="24dp" />

    <Button
        android:id="@+id/IN_StartDay_BT"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:maxHeight="20dp"
        android:maxLines="1"
        android:minEms="0"
        android:text="月日"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/IN_Weeks_TV"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/Week"
        android:textSize="24dp" />
    
    <Button
        android:id="@+id/IN_Weeks_BT"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:textSize="24dp" />

    <GridLayout
        android:id="@+id/UIGrid"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:layout_rowSpan="1"
        android:columnCount="4"
        android:rowCount="8" >
        
        <TextView
	        android:id="@+id/IN_WeekDay_TV"
	        android:layout_column="0"
	        android:layout_gravity="left"
	        android:layout_row="0"
	        android:text="@string/Days" />
	    
	    <TextView
	        android:id="@+id/IN_StartTime_TV"
	        android:layout_column="1"
	        android:layout_gravity="left"
	        android:layout_row="0"
	        android:text="@string/StartTime" />
	    
	    <TextView
	        android:id="@+id/IN_EndTime_TV"
	        android:layout_column="2"
	        android:layout_gravity="left"
	        android:layout_row="0"
	        android:text="@string/EndTime" />
	    
	    <TextView
	        android:id="@+id/IN_AddTime_TV"
	        android:layout_column="3"
	        android:layout_gravity="left"
	        android:layout_row="0"
	        android:text="@string/AddText" />
	    
        <!-- ****************************0******************************** -->

	    <Button
	        android:id="@+id/IN_Day_BT_0"
	        android:layout_column="0"
	        android:layout_row="1"
	        android:minEms="8"
	        android:text="一二三"
	        android:textSize="16dp" />
	    
	    <Button
	        android:id="@+id/IN_StartTime_BT_0"
	        android:layout_column="1"
	        android:layout_row="1"
	        android:text="15:00" />
	    
	    <Button
	        android:id="@+id/IN_EndTime_BT_0"
	        android:layout_column="2"
	        android:layout_row="1"
	        android:text="17:00" />
	    
	    <Button
	        android:id="@+id/IN_AddTime_BT"
	        android:layout_column="3"
	        android:layout_row="1"
	        android:text="+" />
	    
	    <!-- ****************************1******************************** -->

	    <Button
	        android:id="@+id/IN_Day_BT_1"
	        android:layout_column="0"
	        android:layout_row="2"
	        android:minEms="8"
	        android:enabled="true"
	        android:text="一"
	        android:textSize="16dp"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_StartTime_BT_1"
	        android:layout_column="1"
	        android:layout_row="2"
	        android:text="15:00"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_EndTime_BT_1"
	        android:layout_column="2"
	        android:layout_row="2"
	        android:text="17:00"
	        android:visibility="gone" />
	    
	    <!-- ****************************2******************************** -->

	    <Button
	        android:id="@+id/IN_Day_BT_2"
	        android:layout_column="0"
	        android:layout_row="3"
	        android:minEms="8"
	        android:text="一"
	        android:textSize="16dp"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_StartTime_BT_2"
	        android:layout_column="1"
	        android:layout_row="3"
	        android:text="15:00"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_EndTime_BT_2"
	        android:layout_column="2"
	        android:layout_row="3"
	        android:text="17:00"
	        android:visibility="gone" />
	    
	    <!-- ****************************3******************************** -->
	    <Button
	        android:id="@+id/IN_Day_BT_3"
	        android:layout_column="0"
	        android:layout_row="4"
	        android:minEms="8"
	        android:text="一"
	        android:textSize="16dp"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_StartTime_BT_3"
	        android:layout_column="1"
	        android:layout_row="4"
	        android:text="15:00"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_EndTime_BT_3"
	        android:layout_column="2"
	        android:layout_row="4"
	        android:text="17:00"
	        android:visibility="gone" />
	    
	    <!-- ****************************4******************************** -->
	    <Button
	        android:id="@+id/IN_Day_BT_4"
	        android:layout_column="0"
	        android:layout_row="5"
	        android:minEms="8"
	        android:text="一"
	        android:textSize="16dp"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_StartTime_BT_4"
	        android:layout_column="1"
	        android:layout_row="5"
	        android:text="15:00"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_EndTime_BT_4"
	        android:layout_column="2"
	        android:layout_row="5"
	        android:text="17:00"
	        android:visibility="gone" />
	    
	    <Button
	        android:id="@+id/IN_DeleteTime_BT"
	        android:layout_column="3"
	        android:layout_row="5"
	        android:text="-"
	        android:visibility="gone" />
	    
	    
	    
    </GridLayout>
    
    


</GridLayout>
